# gEngine

./: .gitignore  CMakeLists.txt  README.md  copyRes.ps1  launchCMake.bat  launchCMake.sh  out.ppm
experiments/debug/: colors.cc  compile.bat  global.cc  global.h  main.cc
experiments/paths/: CMakeLists.txt  launchCMake.bat  launchCMake.sh
experiments/paths/src/: main.cc
experiments/shared_ptr/: actor.h  entity.h  holder.h  main.cc  scene.h
experiments/variable_templates/: main.cc
res/models/text/: text.mtl
res/shaders/: Cube.fs  Cube.vs  fragment.glsl  lightCube.fs  lightCube.vs  model.vs  vertex.glsl
res/shaders/blending/: model.fs
res/shaders/grid/: grid.fs  grid.vs
res/shaders/lighting_add/: model.fs  model.vs
res/shaders/model_refactoring/: model.fs
res/shaders/skybox/: skybox.vs
res/shaders/stencil/: border.fs  border.vs  model.fs
src/: main.cc
src/Renderer/: ShaderProgram.cc  ShaderProgram.h  TextureGL.cc  TextureGL.h
src/Resources/: ResourceManager.cc  ResourceManager.h  Texture_base.cc  Texture_base.h
src/Resources/actor/: actor.cc  actor.h  player_wrap.cc  player_wrap.h
src/Resources/actor/components/: camera.cc  camera.h  component_base.h
src/Resources/process/: global.cc  global.h
src/Resources/texture/: Texture_base.cc
src/Resources/window/: window_base.cc  window_base.h
src/actor/: actor.cc  actor.h  actor.hpp  actorDEF.h  player_wrap.cc  player_wrap.h
src/actor/components/: camera.cc  camera.h  component_base.cc  component_base.h  light.cc  light.h  staticMesh.cc  staticMesh.h
src/debug/: debug.cc  debug.h  formater.cc  formater.h  formater_UNIX.cc  formater_UNIX.h  formater_WIN.cc  formater_WIN.h  logger.cc  logger.h
src/geometry/: geometry_base.cc  geometry_base.h
src/manager/: AccessHandler.cc  AccessHandler.h  Entity.cc  Entity.h  EnvironmentHandler_wrap.cc  EnvironmentHandler_wrap.h  ResourceManager.cc  ResourceManager.h  ResourceManager.hpp  ResourceManager_wrap.cc  ResourceManager_wrap.h
src/material/: Color.h  ColorComponent.cc  ColorComponent.h  IMatNode.h  Material.h  TextureGL.cc  TextureGL.h  color.cc  color.h  material.cc  material.h  material.hpp  raw_texture.cc  raw_texture.h  texture.cc  texture.h
src/model/: mesh_base.cc  mesh_base.h  model3D.cc  model3D.h  primitives.DEF  primitives.cc  primitives.h  primitivesDEF.h
src/objects/: Cube.cc  Cube.h  backpack.cc  backpack.h  sun.cc  sun.h
src/process/: global.cc  global.h
src/properties/: properties.cc  properties.h
src/renderer/: ShaderProgram.cc  ShaderProgram.h  TextureGL.cc  TextureGL.h
src/scene/: scene.cc  scene.h  scene.hpp  scene_wrap.cc  scene_wrap.h
src/scene/gismo/: grid.cc  grid.h
src/scene/skybox/: skybox.cc  skybox.h
src/temporary_work/: CMakeLists.txt  IMaterialNode.h  Readme  ResourceManager.h  align_test.cc  color.h  launchCMake.bat  main.cc  mat_template_test.cc  mat_variant_test.cc  material.h  raw_texture.h  texture.h
src/temporary_work/material/: ColorComponent.cc  ColorComponent.h  color.h  material.h  raw_texture.cc  raw_texture.h  texture.cc  texture.h
src/texture/: Texture_base.cc  Texture_base.h
src/window/: window_base.cc  window_base.h  window_wrap.cc  window_wrap.h
